# kagi

./: Cargo.toml  LICENSE-MIT  README.md  check.sh  flake.nix
extensions/: kagi-cli-prompt.ts
src/: cli.rs  client.rs  main.rs  request.rs
