[package]
name = "kagi"
description = "Command-line client for the Kagi API"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
